:sparkles: Setup reranking RAG chain.

--- a/compose.yml
+++ b/compose.yml
@@ -6,8 +6,8 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    # ports:
-    #   - 8000:8000
+    ports:
+      - 8000:8000
     volumes:
       - .:/workspace
     container_name: simplerag-app
